# threatconnectome

./: .env.example  .env.firebase.example  .env.for_demo  .env.supabase.example  .gitignore  .trivyignore  AGENTS.md  CREDITS.txt  LICENSE  README.md  alembic_version_ffb55d.sql  api-test.dockerfile  api.dockerfile  coding.agent.md  demo_launch.sh  demo_setup.sh  demo_start.sh  demo_stop.sh  docker-compose-demo.yml  docker-compose-e2e.yml  docker-compose-firebase-local.yml  docker-compose-firebase-test.yml  docker-compose-local.yml  docker-compose-prod.yml  docker-compose-supabase-local.yml  docker-compose-supabase-test.yml  docker-compose-test-supabase.yml  docker-compose-test.yml  e2e-test.dockerfile  testapi.sh  testapi_supabase.sh  teste2e.sh  trivy.yaml  web.dockerfile
api/: Dockerfile  Pipfile  api.agent.md  pyproject.toml
api/app/: account.py  alembic.ini  alert.py  auth.py  command.py  common.py  constants.py  database.py  eol_constants.py  main.py  models.py  openapi.py  persistence.py  sbom.py  schemas.py  sendgrid.py  slack.py  ssvc.py  ticket.py  ticket_manager.py  version.py
api/app/alembic/: env.py
api/app/auth/: account.py  api_key.py  auth_exception.py  auth_module.py  firebase_auth_module.py  supabase_auth_module.py
api/app/business/: dependency_business.py  misp_tag_business.py  package_business.py  progress_business.py  ssvc_business.py  tag_business.py  threat_business.py  ticket_business.py  topic_business.py  vuln_business.py  vulnerability_detector.py
api/app/data_checker/: account_checker.py  pteam_checker.py  service_checker.py  ticket_checker.py  topic_checker.py
api/app/detector/: ecosystem_analyzer.py  package_family.py  vulnerability_detector.py  vulnerable_range.py
api/app/notification/: alert.py  eol_notification_utils.py  mail.py  sendgrid.py  slack.py
api/app/presenters/: pteam_presenter.py
demo/: .env  (+9 more)
e2etests/: Pipfile  api_utils.py  constants.py  exceptions.py  pyproject.toml  test_e2e.py
(+1912 files in other folders)
