[project]
name = "threatconnectome-api"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "alembic",
    "cyclonedx-python-lib[validation]",
    "cryptography>=46.0.5",
    "deprecation",
    "email-validator",
    "fastapi",
    "firebase-admin",
    "hypercorn",
    "mako>=1.3.12",
    "packageurl-python",
    "pillow",
    "protobuf<7.0",
    "psycopg2",
    "pydantic",
    "python-multipart>=0.0.31",
    "requests",
    "sendgrid",
    "slack-sdk",
    "sqlalchemy",
    "supabase",
    "univers",
]

[dependency-groups]
dev = [
    "black==26.3.1",
    "codespell",
    "httpretty",
    "httpx",
    "mypy",
    "mypy-extensions",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "types-requests",
]

[tool.uv]
package = false

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
lint.select = [
  "E",  # pycodestyle error
  "F",  # pyflakes
  "I",  # isort
  "W",  # pycodestyle warning
]
extend-exclude = [
    "app/alembic/versions/",
]

# `E741` Do not use variables named 'I', 'O', or 'l' https://www.flake8rules.com/rules/E741.html
lint.ignore = ["E741"]

[tool.black]
line-length = 100
extend-exclude = '''
(
    /app/alembic/versions/
)
'''
