[project]
name = "threatconnectome-e2etests"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "pytest-playwright",
    "requests",
    "types-requests",
]

[dependency-groups]
dev = [
    "black",
    "mypy",
    "ruff",
]

[tool.uv]
package = false

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
lint.select = [
  "E",  # pycodestyle error
  "F",  # pyflakes
  "I",  # isort
  "W",  # pycodestyle warning
]

# `E741` Do not use variables named 'I', 'O', or 'l' https://www.flake8rules.com/rules/E741.html
lint.ignore = ["E741"]

[tool.black]
line-length = 100
